--- a/luk_sdk/example/android/build.gradle
+++ b/luk_sdk/example/android/build.gradle
@@ -1,10 +1,10 @@
 allprojects {
     repositories {
 
-        maven { url 'https://maven.aliyun.com/repository/google' }
-//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { allowInsecureProtocol = true
-            url 'https://maven.aliyun.com/nexus/content/groups/public' }
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+////        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { allowInsecureProtocol = true
+//            url 'https://maven.aliyun.com/nexus/content/groups/public' }
 
         google()
         mavenCentral()
@@ -22,3 +22,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
