--- a/luk_sdk/pubspec.yaml
+++ b/luk_sdk/pubspec.yaml
@@ -1,6 +1,6 @@
 name: luk_sdk
 description: The capability of implementing LUK SDK in Flutter.
-version: 0.0.1
+version: 0.0.2
 homepage: https://www.luk.live/developer
 
 environment:
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   webview_flutter: ^4.10.0
-
+  webview_flutter_android: ^4.3.2
 
 dev_dependencies:
   flutter_test:
